fixed list misalignment

--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -336,7 +336,7 @@ label[for="id__menu-state"] {
   }
 }
 
-.content--flex::after {
+.content--flex-between::after {
   @media (--medium) {
     content: '';
     width: calc(var(--large-width)/3 - 4.8rem);
